--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>webpack</title> 
+  <title>webpack</title>
 </head>
 
 <body>
-  <h1 id="title">hello html</h1>
-  
+  <h1>hello lazy loading</h1>
+  <button id="btn">按钮</button>
 </body>
 
 </html>
